...
                                        <rect key="frame" x="0.0" y="248" width="375" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="eDc-WV-q16" id="n7H-n2-1JG">
                                            <rect key="frame" x="0.0" y="0.0" width="348" height="44"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add Tags" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hhh-fq-QHP">
                                                    <rect key="frame" x="16" y="0.0" width="332" height="44"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                            </subviews>
...
                        </sections>
                        <connections>
                            <outlet property="dataSource" destination="ydo-7B-D84" id="9CL-og-Xuu"/>
                            <outlet property="delegate" destination="ydo-7B-D84" id="yVm-Hi-Wjp"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Add New Game" id="izJ-za-wMB">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="Ug8-rU-VTE">
                            <connections>
                                <segue destination="frX-D4-lRw" kind="unwind" identifier="unwind.statList" unwindAction="unwindToStatListWithUnwindSegue:" id="3yP-aA-MMP"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="5Hl-B7-dSn">
...
